2010-08-10  Robert Larice
 * src/maths/ni/niniter.c' :
    drop (SMPmatrix*) casts, which are no longer necessary

2010-08-10  Robert Larice
 * src/spicelib/analysis/tfanal.c :
    drop (GENinstance*) casts, which are no longer necessary

2010-08-10  Robert Larice
 * src/frontend/spiceif.c' :
    drop (INPtables*) casts, which are no longer necessary

2010-08-10  Robert Larice
 * src/frontend/spiceif.c ,
 * src/spicelib/analysis/cktmask.c ,
 * src/spicelib/analysis/cktmcrt.c ,
 * src/spicelib/analysis/cluster.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/devices/cktcrte.c ,
 * src/spicelib/devices/cktfinddev.c :
    drop (GENmodel*) casts, which are no longer necessary

2010-08-09  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/parser/input.c ,
 * src/frontend/plotting/x11.c ,
 * src/main.c :
    fix a busy waiting loop when using editline. rl_event_hook must block until
      there is some work to do. (select on stdin and the X11 socket).
    For non-X11, don't use rl_event_hook at all.

2010-08-09  Robert Larice
 * src/spicelib/analysis/cktmapn.c :
    bug fix, incorrect indirection level, yet without consequence,
      function CKTmapNode() is unused.

2010-08-09  Robert Larice
 * src/spicelib/parser/inpgval.c :
    fix assignment to a member of union IFvalue

2010-08-07  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/frontend/parse-bison.y :
    bug fix,
      avoid segfault, caused when parsing an unknown function in parse-bison.y

2010-08-07 Dietmar Warning
 spicelib/devices/*/b4soimask.c, csw*.c, mos6load.c, soi3load.c, swnoise.c: 
    fix some wrong 'double' to 'int' assignments

2010-08-07  Robert Larice
 * src/main.c :
    bug fix, segfault caused by an ancient `editline' workaround
    (bug tracker ID: 2966977, `segfault with editline')

2010-08-07  Robert Larice
 * src/tclspice.c ,
 * src/include/tclspice.h :
    bug fix, I've recently broken compilation of tclspice.
    - missing #include